--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/services.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/services.yml
@@ -1,7 +1,14 @@
 parameters:
-#    rottenwood_utopia_mud.example.class: Rottenwood\UtopiaMudBundle\Example
+  rottenwood_utopia_mud.command.class: Rottenwood\UtopiaMudBundle\Example
 
 services:
+  command:
+    class:      Rottenwood\UtopiaMudBundle\Service\CommandService
+    arguments:  [@doctrine.orm.entity_manager]
+#
+#  calendar:
+#    class: Rottenwood\BillingBonesBundle\Service\Calendar
+#    arguments: [%calendar.mood%]
 #    rottenwood_utopia_mud.example:
 #        class: %rottenwood_utopia_mud.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
