--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/services.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/services.yml
@@ -4,7 +4,7 @@ parameters:
 services:
   command:
     class:      Rottenwood\UtopiaMudBundle\Service\CommandService
-    arguments:  [@doctrine.orm.entity_manager]
+    arguments:  [@doctrine.orm.entity_manager, @kernel]
 #
 #  calendar:
 #    class: Rottenwood\BillingBonesBundle\Service\Calendar
