--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -2,6 +2,36 @@
 #   Список команд   #
 #####################
 
-look:
-    alias:
-    - смотреть
+#commandtype:
+#    1: talk
+#    2: action
+#    3: skill
+
+commands:
+    look:
+        type: action
+        alias:
+        - look
+        - смотреть
+        - взглянуть
+    north:
+        type: action
+        alias:
+        - north
+        - север
+    south:
+        type: action
+        alias:
+        - south
+        - юг
+    west:
+        type: action
+        alias:
+        - west
+        - запад
+    east:
+        type: action
+        alias:
+        - east
+        - восток
+
