--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/routing.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/routing.yml
@@ -1,8 +1,33 @@
-rottenwood_utopia_mud_homepage:
+rottenwood_utopiamud_index:
     path:     /
     defaults: { _controller: RottenwoodUtopiaMudBundle:Default:index }
 
-ajax:
+### Login
+#utopiamud_login:
+#    path: /login
+#    defaults: { _controller: RottenwoodUtopiaMudBundle:Security:login }
+
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+fos_user_profile:
+    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+    prefix: /profile
+
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
+
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /resetting
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profile
+###
+
+utopiamud_ajax:
     path:     /ajax
     defaults: { _controller: RottenwoodUtopiaMudBundle:Default:ajax }
     requirements: { _method: POST }
