Система регистрации и логина. Команда выхода из игры

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -34,4 +34,10 @@ commands:
         - look
         - смотреть
         - взглянуть
-
+    quit:
+        type: system
+        alias:
+        - quit
+        - конец
+        - выход
+        - exit
