--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,4 +1,6 @@
 security:
+    encoders:
+        FOS\UserBundle\Model\UserInterface: sha512
     providers:
         fos_userbundle:
             id: fos_user.user_provider.username
