--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,7 +72,7 @@ swiftmailer:
 fos_user:
     db_driver: orm
     firewall_name: main
-    user_class: Rottenwood\UtopiaMudBundle\Entity\Register
+    user_class: Rottenwood\UtopiaMudBundle\Entity\Player
     registration:
         form:
             type: utopiamud_user_registration
