Реализована возможность передвижения персонажа

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -28,6 +28,18 @@ commands:
         alias:
         - east
         - восток
+    up:
+            type: action
+            alias:
+            - up
+            - вверх
+            - наверх
+    down:
+            type: action
+            alias:
+            - down
+            - вниз
+            - низ
     look:
         type: action
         alias:
