Добавлен список зон, тестовая зона. Работа над парсером зон

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -46,3 +46,8 @@ commands:
         alias:
         - quit
         - конец
+    format:
+        type: system
+        alias:
+        - format
+        - формат
