--- a/composer.json
+++ b/composer.json
@@ -42,11 +42,17 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "ratchet/pawl": "dev-master",
-        "voryx/thruway": "dev-master"
+        "rottenwood/thruwayrus": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
     },
+    "repositories": [
+        {
+            "url": "https://github.com/Rottenwood/Thruway.git",
+            "type": "git"
+        }
+    ],
     "scripts": {
         "post-root-package-install": [
             "SymfonyStandard\\Composer::hookRootPackageInstall"
