В роутинг добавлено требование запроса GET #6

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/routing.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/routing.yml
@@ -1,6 +1,7 @@
 rottenwood_utopiamud_index:
     path:     /
     defaults: { _controller: RottenwoodUtopiaMudBundle:Default:index }
+    requirements: { _method: GET }
 
 ### Login
 #utopiamud_login:
