Назначен путь для сохранения сессий пользователей #8

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -12,6 +12,8 @@ framework:
     form: ~
     session:
         name: "UTOPIAMUD"
+        handler_id: session.handler.native_file
+        save_path: "%kernel.root_dir%/sessions"
     csrf_protection: ~
     validation:      { enable_annotations: true }
     templating:
