DataChannel переформирован в DataChannelService

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/services.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/services.yml
@@ -24,3 +24,7 @@ services:
     commandsystem:
         class:  Rottenwood\UtopiaMudBundle\Service\CommandSystemService
         arguments:  [@kernel]
+    # Сервис игроков, находящихся онлайн
+    datachannel:
+        class:  Rottenwood\UtopiaMudBundle\Service\DataChannelService
+        arguments:  []
