Реализован импорт зоны из YAML-файла и запись ее в базу #18

--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
@@ -29,6 +29,14 @@
 #                south: "якорь комнаты располагающейся на юге"
 #                east: "якорь комнаты располагающейся на востоке"
 #                west: "якорь комнаты располагающейся на западе"
+#
+# Для того чтобы связать две зоны нужно указать выход в формате: якорь_комнаты:якорь_зоны
+#   например:
+#       south: road                 -- выход ведет в текущую зону
+#       north: "road:medievaltown"  -- выход будет вести в зону medievaltown
+#
+# Примечание:   если выход ведет в другую зону, всегда берите его в "кавычки".
+#               Это же справедливо и для названий, содержащих пробеламы.
 
 rooms:
     square:
