Формат отображения системных вызовов. Автоматический импорт при загрузке муда

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -46,8 +46,8 @@ commands:
         alias:
         - quit
         - конец
-    format:
+    import:
         type: system
         alias:
-        - format
-        - формат
+        - import
+        - импорт
