Во фронтэнд добавлен макет карты

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,6 +14,6 @@ parameters:
     locale:            ru
     secret:            SuperSecretLandOfMetal
 
-    debug_toolbar:          true
+    debug_toolbar:          false
     debug_redirects:        false
     use_assetic_controller: true
