--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "ratchet/pawl": "dev-master",
-        "rottenwood/thruwayrus": "dev-master"
+        "voryx/thruway": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
