--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,9 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "ratchet/pawl": "dev-master",
-        "voryx/thruway": "dev-master"
+        "voryx/thruway": "dev-master",
+        "cboden/ratchet": "0.3.*",
+        "react/zmq": "0.2.*|0.3.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
