Рефакторинг вебсокет сервиса

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/routing.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/routing.yml
@@ -28,3 +28,6 @@ fos_user_change_password:
     prefix: /profile
 ###
 
+test:
+    path:     /test
+    defaults: { _controller: RottenwoodUtopiaMudBundle:Default:test }
