Реализована команда say, позволяющая общаться в пределах комнаты

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -51,3 +51,9 @@ commands:
         alias:
         - import
         - импорт
+    say:
+        type: action
+        alias:
+        - say
+        - сказать
+        - произнести
