--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,7 +3,7 @@ security:
         FOS\UserBundle\Model\UserInterface: sha512
     providers:
         fos_userbundle:
-            id: fos_user.user_provider.username
+            id: fos_user.user_provider.username_email
 #        main:
 #            entity: { class: Rottenwood\UtopiaMudBundle\Entity\User, property: username }
 
