При регистрации добавлена проверка на русский ник

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,7 +41,8 @@ framework:
 # Twig Configuration
 twig:
     debug:            "%kernel.debug%"
-    strict_variables: "%kernel.debug%"
+    strict_variables: false
+#    strict_variables: "%kernel.debug%"
 
 # Assetic Configuration
 assetic:
