Игорь добавлен в список разработчиков проекта

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
             "name": "Petr Karmashev, Rottenwood",
             "email": "petr@quank.org",
             "role": "Lead Developer"
+        },
+        {
+            "name": "Igor Zhilin",
+            "role": "Zones Creator"
         }
     ],
     "support": {
