--- a/src/Rottenwood/UtopiaMudBundle/Resources/types/roomtypes.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/types/roomtypes.yml
@@ -5,7 +5,7 @@
 roomtypes:
     inside:                     # название типа комнаты
         desc: "в помещении"     # ответ на вопрос: "где я нахожусь?"
-    city:
+    town:
         desc: "в городе"
     water:
         desc: "в воде"
