--- a/src/Rottenwood/UtopiaMudBundle/Resources/types/roomtypes.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/types/roomtypes.yml
@@ -3,10 +3,10 @@
 ###########################
 
 roomtypes:                      # типы комнат в алфавитном порядке
-    inside:                     # название типа комнаты
-        desc: "в помещении"     # ответ на вопрос: "где я нахожусь?"
-    air:
-        desc: "в воздухе"
+    air:                        # название типа комнаты
+        desc: "в воздухе"       # ответ на вопрос: "где я нахожусь?"
+    ashland:
+        desc: "в выжженной пустоши"
     cave:
         desc: "в пещере"
     deadfall:
@@ -25,6 +25,8 @@ roomtypes:                      # типы комнат в алфавитном 
         desc: "на плоскогорье"
     hills:
         desc: "среди холмов"
+    inside:
+        desc: "в помещении"
     mountain:
         desc: "среди гор"
     road:
