Реализован импорт всех имеющихся зон

--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/zonelist.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/zonelist.yml
@@ -5,4 +5,5 @@
 zonelist:
     medievaltown:
         name: "Средневековый город"
-        anchor: mtown
+    townlake:
+        name: "Озеро у города"
