--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
@@ -159,6 +159,7 @@ rooms:
         exits:
             south: street2
             north: park2
+            west: street1:townlake
 
     park2:
         name: "Городской парк"
