В конфиг и обработчик рас добавлен флаг npconly

--- a/src/Rottenwood/UtopiaMudBundle/Resources/races/races.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/races/races.yml
@@ -58,7 +58,7 @@ races:
         HT: 14
         skills:
             - rockeater
-        npconly: yes
+        npconly: true
 
     reptile:
         name: ящер
