--- a/src/Rottenwood/UtopiaMudBundle/Resources/types/damagetypes.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/types/damagetypes.yml
@@ -19,14 +19,14 @@ damagetypes:
     chomp: ["", "", ""]
     chill: ["", "", ""]
     digestion: ["", "", ""]
-    divine: ["", "", ""]
+    divine: ["поразил древней силой", "поразила древней силой", "поразило древней силой"]
     drain: ["", "", ""]
     electro: ["", "", ""]
     flame: ["", "", ""]
     freeze: ["", "", ""]
     grep: ["", "", ""]
     hit: ["ударил", "ударила", "ударило"]
-    magic: ["", "", ""]
+    magic: ["нанес магический урон", "нанесла магический урон", "нанесло магический урон"]
     peck: ["", "", ""]
     pound: ["", "", ""]
     pierce: ["", "", ""]
