--- a/src/Rottenwood/UtopiaMudBundle/Resources/types/damagetypes.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/types/damagetypes.yml
@@ -8,41 +8,46 @@
 
 damagetypes:
     acid: ["", "", ""]
-    beat: ["", "", ""]
-    blast: ["", "", ""]
-    bite: ["", "", ""]
-    claw: ["", "", ""]
-    crush: ["", "", ""]
+    beat: ["ударил", "ударила", "ударило"]
+    blast: ["разнес", "разнесла", "разнесло"]
+    bite: ["укусил", "укусила", "укусило"]
+    butt: ["боднул", "боднула", "боднуло"]
+    claw: ["исполосовал", "исполосовала", "исполосавало"]
+    crush: ["сокрушил", "сокрушила", "сокрушило"]
     charge: ["", "", ""]
-    cleave: ["", "", ""]
-    chop: ["", "", ""]
-    chomp: ["", "", ""]
-    chill: ["", "", ""]
-    digestion: ["", "", ""]
+    cleave: ["рассек", "рассекла", "рассекло"]
+    chop: ["рубанул", "рубанула", "рубануло"]
+    chomp: ["грызанул", "грызанула", "грызануло"]
+    chill: ["застудил", "застудила", "застудило"]
+    digestion: ["переварил", "переварила", "переварило"]
     divine: ["поразил древней силой", "поразила древней силой", "поразило древней силой"]
-    drain: ["", "", ""]
+    drain: ["истощил", "истощила", "истощило"]
     electro: ["", "", ""]
-    flame: ["", "", ""]
-    freeze: ["", "", ""]
+    flame: ["поджег", "поджегла", "поджегло"]
+    freeze: ["заморозил", "заморозила", "заморозило"]
     grep: ["", "", ""]
     hit: ["ударил", "ударила", "ударило"]
+    jab: ["пырнул", "пырнула", "пырнуло"]
+    kick: ["лягнул", "лягнула", "лягнуло"]
     magic: ["нанес магический урон", "нанесла магический урон", "нанесло магический урон"]
-    peck: ["", "", ""]
-    pound: ["", "", ""]
-    pierce: ["", "", ""]
-    punch: ["", "", ""]
-    slash: ["", "", ""]
+    peck: ["клюнул", "клюнула", "клюнуло"]
+    poke: ["ткнул", "ткнула", "ткнуло"]
+    pound: ["растер", "растерла", "растерло"]
+    pierce: ["уколол", "уколола", "укололо"]
+    punch: ["огрел", "огрела", "огрело"]
+    shot: ["подстрелил", "подстрелила", "подстрелило"]
+    slash: ["резанул", "резанула", "резануло"]
     slice: ["порезал", "порезала", "порезало"]
-    stab: ["", "", ""]
-    suction: ["", "", ""]
-    slap: ["", "", ""]
-    scratch: ["", "", ""]
-    sting: ["", "", ""]
-    shock: ["", "", ""]
-    smash: ["", "", ""]
+    stab: ["вонзил", "вонзила", "вонзило"]
+    suction: ["засосал", "засосала", "засосало"]
+    slap: ["шлепнул", "шлепнула", "шлепнуло"]
+    scratch: ["оцарапал", "оцарапала", "оцарапало"]
+    sting: ["ужалил", "ужалила", "ужалило"]
+    shock: ["сотряс", "сотрясла", "сотрясло"]
+    smash: ["разгромил", "разгромила", "разгромило"]
     slime: ["", "", ""]
-    thrust: ["", "", ""]
+    tear: ["ободрал", "ободрала", "ободрало"]
+    thrust: ["толкнул", "толкнула", "толкнуло"]
     thwack: ["", "", ""]
-    whip: ["", "", ""]
+    whip: ["хлестнул", "хлестнула", "хлестнуло"]
     wrath: ["", "", ""]
-
